# simply-nous

./: LICENSE  README.md  pyproject.toml
.claude/: CLAUDE.md
docs/: simply.yaml
docs/design/: ECOSYSTEM.md
docs/nous/0.1/: COMPATIBILITY.md  ROADMAP.md
docs/nous/0.1/phases/1/: HANDOFF.md  TASKS.md
docs/nous/0.1/phases/2/: HANDOFF.md  TASKS.md
docs/nous/0.1/phases/3/: HANDOFF.md  JOURNAL.md  TASKS.md
docs/nous/0.1/phases/4/: JOURNAL.md  TASKS.md
src/nous/: __init__.py  demo.py
src/nous/agent/: __init__.py  runner.py
src/nous/engine/: __init__.py  content.py  context.py  engine.py
src/nous/llm/: __init__.py  caching.py  capabilities.py  config.py  events.py  hub.py  protocol.py
src/nous/llm/providers/: __init__.py  anthropic.py  gemini.py  mistral.py  ollama.py  openai.py  openrouter.py
src/nous/mcp/: __init__.py  approval.py  client.py  executor.py
src/nous/storage/: __init__.py
src/nous/types/: __init__.py  content.py  conversation.py  knowledge.py  provider.py  tool.py
src/nous/view/: __init__.py  memory.py  mock.py  protocol.py
tests/: __init__.py  test_agent.py  test_engine.py  test_llm.py  test_mcp.py  test_types.py  test_view.py
