[project]
name = "simply-nous"
version = "0.1.0"
description = "Shared AI core for Episteme and Lumina - the capacity to think"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
claude = ["anthropic>=0.40"]
openai = ["openai>=1.50"]
gemini = ["google-generativeai>=0.8"]
all = [
    "anthropic>=0.40",
    "openai>=1.50",
    "google-generativeai>=0.8",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nous"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
